@@ -265,6 +265,8 @@ ECL 0.9i
   - ecl_listen_stream (used in LISTEN or READ-CHAR-NO-HANG) now returns the
     correct value when applied on a CLOS stream (M. Goffioul)
 
+  - Calling cl_shutdown() or cl_boot() multiple times is now safe.
+
 * Documentation:
 
  - The HTML manuals now use CSS for a more appealing look.
